# EOE_MCP

./: .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  config.example.yaml  mcp_server.py  pyproject.toml
.augment/rules/: project.md
eve_esi/: __init__.py  auth.py  client.py  config.py
eve_esi/endpoints/: __init__.py  assets.py  characters.py  fitting_analysis.py  fittings.py  hauling.py  market.py  navigation.py  skills.py  universe.py  wallet.py
